fixed deadlock (https://jira.jboss.org/jira/browse/JGRP-967)